<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ivory"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/notes"
            app:titleTextColor="@color/colorPrimary">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/enter_title"
            android:inputType="textShortMessage|textCapSentences" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?dividerHorizontal" />

        <EditText
            android:id="@+id/enter_note_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="top|left"
            android:hint="@string/enter_note"
            android:inputType="textLongMessage|textMultiLine|textCapSentences" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>